--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,36 @@ aiohappyeyeballs==2.4.3
 aiohttp==3.11.8
 aiosignal==1.3.1
 attrs==24.2.0
+cachetools==6.2.1
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
 discord==2.3.2
-discord.py==2.4.0
+discord.py==2.6.4
 enum-tools==0.12.0
 frozenlist==1.5.0
+google-api-core==2.26.0
+google-auth==2.41.1
+google-cloud-texttospeech==2.31.0
+googleapis-common-protos==1.70.0
+grpcio==1.75.1
+grpcio-status==1.75.1
 idna==3.10
 multidict==6.1.0
 propcache==0.2.0
+proto-plus==1.26.1
+protobuf==6.33.0
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
 Pygments==2.18.0
+PyNaCl==1.6.0
 python-dateutil==2.9.0.post0
+requests==2.32.5
+rsa==4.9.1
 six==1.16.0
 twitchAPI==4.3.1
 typing_extensions==4.12.2
+urllib3==2.5.0
 yarl==1.18.0
