--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 discord==2.3.2
 discord.py==2.6.4
+dotenv==0.9.9
 enum-tools==0.12.0
 frozenlist==1.5.0
 google-api-core==2.26.0
@@ -28,6 +29,7 @@ pycparser==2.23
 Pygments==2.18.0
 PyNaCl==1.6.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 requests==2.32.5
 rsa==4.9.1
 six==1.16.0
